# fastapi-db-poc

./: Dockerfile  README.md  alembic.ini  build-local-container.sh  docker-compose-build.yml  docker-compose.yml  pyproject.toml  setup.cfg
alembic/: env.py
app/: api.py  config.py  crud.py  models.py  utils.py
config/: logging.conf
tests/: test_api.py
