[tool.poetry]
name = "fastapi-template"
version = "0.0.1"
description = "FastAPI temaplate"
authors = ["Seraphnet <dev@seraphnet.ai>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.109.0"
uvicorn = "^0.17.4"
python-json-logger = "^2.0.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
selenium = "^4.21.0"
alembic = "^1.13.1"
qdrant-client = "^1.9.1"
sentence_transformers = "^2.7.0"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
flake8 = "^4.0.1"
pytest = "^7.0.0"
autopep8 = "^1.6.0"
black = "^22.1.0"
pytest-dependency = "^0.5.1"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
jupyter-dash = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
